--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ html, body {
   right: 110px;
   font-size: 35px;
 }
-[data-typing="vue"] {
+[data-typing="vue.js"] {
   top: 200px;
   right: 110px;
   font-size: 35px;
