--- a/style.css
+++ b/style.css
@@ -1,111 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:900&display=swap');
-
-html, body {
-  position: relative;
-  height: 100%;
-  font-family: 'Raleway', sans-serif;
-  font-size: 40px;
-  margin: 0;
-  padding: 0;
-}
-* {
-  box-sizing: border-box;
-  font-size: 40px;
-}
-.wrapper {
-  position: absolute;
-  width: 300px;
-  height: 300px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) translateY(20px) scale(1.5);
-  overflow: hidden;
-}
-@media screen and (max-width: 600px) {
-  .wrapper {
-    transform: translate(-50%, -50%) scale(1);
-  }
-}
-.container {
-  position: absolute;
-  width: 300px;
-  height: 300px;
-  }
-.data-typing {
-  position: absolute;
-  top: 0;
-  /*   border: 1px solid #f55; */
-  transform-origin: 0% 0%;
-  font-size: 25px;
-  margin: 0;
-  padding: 0;
-  top: 100px;
-  line-height: 1;
-  color: #333;
-}
-.data-typing:before {
-  content: "";
-}
-.i {
-  top: 0;
-  left: 50px;
-  font-size: 90px;
-  height: 70px;
-  line-height: 70px;
-}
-.frontend {
-  top: 3px;
-  left: 80px;
-  font-size: 27px;
-  letter-spacing: 1px;
-}
-.developer {
-  top: 30px;
-  left: 80px;     
-  font-size: 40px;
-  letter-spacing: 1px;
-}
-.with {
-  top: 74px;
-  left: 265px;
-  font-size: 36px;
-  transform: rotate(90deg);
-  background: #333;
-  color: #fff;
-  padding: 0px 4px;
-}
-.javascript {
-  top: 74px;
-  left: 229px;
-  transform: rotate(90deg);
-  font-size: 35px;
-}
-.html {  top: 72px;
-  right: 110px;
-  font-size: 25px;
-}
-.css {
-  top: 97px;
-  right: 110px;
-  font-size: 40px;
-}
-.design {
-  top: 134px;
-  right: 110px;
-  font-size: 35px;
-}
-animation {
-  top: 167px;
-  right: 110px;
-  font-size: 35px;
-}
-.vue.js {
-  top: 200px;
-  right: 110px;
-  font-size: 35px;
-}
-
-a {
-  color: #333;
-  text-decoration: none;
-}
+@import"https://fonts.googleapis.com/css?family=PT+Mono";/*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:active,a:hover{outline-width:0}b,strong{font-weight:inherit}b,strong{font-weight:bolder}img{border-style:none}svg:not(:root){overflow:hidden}*{margin:0;padding:0;list-style:none;outline:none;box-sizing:content-box}body{font-family:PT Mono,PT Serif,serif,Helvetica,system-ui;background:#fff;color:#070106;overflow:hidden}a{color:#37aed5}a:hover{color:#2797bc}.main-block{display:-ms-flexbox;display:flex;z-index:1;position:relative}.main-block__bg{width:40%;height:100vh;background-image:url(https://media3.giphy.com/media/rzIOcIZEKeKiY/giphy.gif);background-position:center;background-size:cover;position:relative;overflow:hidden}.main-block__email{display:none;position:absolute;bottom:20px;left:10%;margin-top:40px;font-size:20px}.main-block__email b,.main-block__email a{font-family:Ubuntu Mono}.main-block__info{width:60%;position:relative}.main-block__info-center{width:650px;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%)}.main-block__info-center h1{font-family:PT Mono,PT Serif,serif,Helvetica,system-ui;font-size:100px;letter-spacing:.9px;line-height:100px;margin-bottom:20px;transition:text-shadow .3s ease-out;width:600px}.main-block__info-center p{font-family:PT Mono;font-size:29px;color:#070106;letter-spacing:-1px;line-height:61px;width:650px}.main-block__info-center p a{font-size:26px}@media screen and (max-width:1140px){.main-block__info--left h1{font-size:100px}.main-block__info--left p{width:100%;font-size:28px}}@media screen and (max-width:1024px){.main-block__bg{width:35%}.main-block__left{width:65%}.main-block__left h1{font-size:90px}.main-block__left p{font-size:26px}.main-block__info{width:520px}}@media screen and (min-width:1441px){.main-block__bg,.main-block__left{width:50%}}.grid{position:absolute;z-index:0;height:100vh;width:100%}.grid div{height:100vh;width:10%;border-right:1px solid #f5f5f5;display:inline-block}
