--- a/site_1/style.css
+++ b/site_1/style.css
@@ -245,7 +245,7 @@ button{
 
 .advantages__block{
     width: 750px;
-    background-image: url(/img/Layer\ 17.jpg);
+    background-image: url(/img/Layer17.jpg);
     background-repeat: no-repeat;
     padding: 75px 0 0 50px;
 }
