--- a/site_1/style.css
+++ b/site_1/style.css
@@ -30,6 +30,7 @@ a{
 .top__menubutton{
     width: 75px;
     padding-top: 10px;
+    display: none;
 }
 
 .top__menuitem{
@@ -61,6 +62,7 @@ a{
 .navigation__item{
     font-size: 13px;
     margin-right: 35px;
+
 }
 
 .navigation__item--first{
@@ -69,13 +71,19 @@ a{
 
 .navigation__link{
     color: #fff;
+    transition: 0.2s;
+}
+
+.navigation__link:hover{
+    color: #3753da;
+    transition: 0.2s;
 }
 
 .top__socials{
     display: flex;
     border-right: 1px solid #4c515a;
     border-left: 1px solid #4c515a;
-    margin-left: 30%;
+    margin-left: 35%;
     height: 75px;
     padding: 27px 7px 0 40px;
 }
@@ -154,7 +162,8 @@ button{
 }
 
 .main-wrapper{
-    width: 1500px;
+    width: 100%;
+    max-width: 1500px;
     margin: 0 auto;
     margin-top: -75px;
     z-index: 2;
@@ -245,7 +254,7 @@ button{
 
 .advantages__block{
     width: 750px;
-    background-image: url(/site_1/img/Layer17.jpg);
+    background-image: url(/img/Layer17.jpg);
     background-repeat: no-repeat;
     padding: 75px 0 0 50px;
 }
@@ -345,7 +354,8 @@ button{
 }
 
 .items__container{
-    width: 374px;
+    width: 25%;
+    min-width: 300px;;
     height: 374px;
     border-right: 1px solid #c7c7c7;
     border-top: 1px solid #c7c7c7;
@@ -403,6 +413,7 @@ button{
 .gallery{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .gallery__image{
@@ -420,6 +431,7 @@ button{
 .brands{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .brands__item{
@@ -498,5 +510,39 @@ footer{
     margin-top: 30px;
 }
 
+.footer__socials--mobile{
+    display: none;
+}
+
 /*Adaptive*/
 
+@media screen and (max-width: 1142px){
+    .free-shipping,
+    .items{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .shipping,
+    .items__container,
+    .brands__wrapper{
+        border: none;
+    }
+    .items__img{
+        width: 100%;
+        height: auto;
+    }
+}
+
+
+@media screen and (max-width: 480px){
+    .footer__socials--mobile{
+        display: block;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        background: #121212;
+    }
+    .top__menubutton{
+        display: block;
+    }
+}
