--- a/site_2/master.css
+++ b/site_2/master.css
@@ -3,7 +3,7 @@ html, body {
       padding: 0;
       width: 100%;
       height: 100vh;
-      background: url(/img/hero.jpg) no-repeat 50% 50%;
+      background: url(hero.jpg) no-repeat 50% 50%;
       background-size: cover;
       overflow: hidden;
 }
