--- a/parket/main.css
+++ b/parket/main.css
@@ -133,9 +133,9 @@ div.price_block > div > div > div > span.old{
     margin-left: 73px;
 }
 
-@media (max-width: 800px) {
-    .calculator{
-        height: auto;
+@media (max-width: 900px) {
+    .flex{
+        justify-content: space-between;
     }
 }
 
