--- a/jeans/style.css
+++ b/jeans/style.css
@@ -11,7 +11,6 @@
 
 header{
     width: 100%;
-    max-width: 1900px;
     background-image: url(img/bgh.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -73,7 +72,7 @@ nav{
     display: block;
     width: 170px;
     height: 43px;
-    background: transparent url(/img/button-login.png);
+    background: transparent url(img/button-login.png);
     background-size: 100% 54px;
     color: #331600;
     text-decoration: none;
@@ -105,14 +104,14 @@ nav{
     font-size: 14px;
     display: block;
     position: relative;
-    background: transparent url(/img/cart.png) 0 0 no-repeat;
+    background: transparent url(img/cart.png) 0 0 no-repeat;
     background-size: 100% 99%;
 }
 
 .cart_icon{
     display: block;
     position: absolute;
-    background: transparent url(/img/cart-b.png) 0 0 no-repeat;
+    background: transparent url(img/cart-b.png) 0 0 no-repeat;
     width: 26px;
     height: 26px;
     top: -2px;
@@ -133,7 +132,7 @@ nav{
 .top-menu__item a{
     color: #000000;
     text-decoration: none;
-    background-image: url(/img/button-login.png);
+    background-image: url(img/button-login.png);
     background-size: cover;
     display: block;
     width: 160px;
@@ -152,15 +151,16 @@ nav{
 .search_hd{
     width: 47px;
     height: 47px;
-    background-image: url(/img/serach-b.png)
+    background-image: url(img/serach-b.png)
 }
 
 .popup_search{
     width: 332px;
     height: 148px;
-    background-image: url(/img/popup.png);
+    background-image: url(img/popup.png);
     position: absolute;
     z-index: 20;
     top: 20%;
     right: 16%;
+    padding: 30px 13px 20px 17px;
 }
