--- a/jeans/style.css
+++ b/jeans/style.css
@@ -105,6 +105,7 @@ nav{
     position: relative;
     background: transparent url(img/cart.png) 0 0 no-repeat;
     background-size: 100% 99%;
+    text-decoration: none;
 }
 
 .cart_icon{
@@ -157,11 +158,12 @@ nav{
     width: 332px;
     height: 148px;
     background-image: url(img/popup.png);
-    position: absolute;
+    position: relative;
     z-index: 20;
-    top: 20%;
-    right: 16%;
-    padding: 35px 13px 20px 17px;
+    top: -3%;
+    right: 86%;
+    padding: 23px 13px 20px 17px;
+    display: none;
 }
 
 .value{
@@ -185,7 +187,7 @@ nav{
 
 .header-search__short{
     width: 143px;
-    margin-right: 12px;
+    margin-right: 16px;
 }
 
 body > div > div > input:nth-child(2){
@@ -197,9 +199,9 @@ body > div > div > input:nth-child(2){
     color: #bbbbbb;
 }
 
-
 .form-bottom{
     margin-top: 40px;
+    display: flex;
 }
 
 .header-search__short::placeholder{
@@ -212,3 +214,4 @@ body > div > div > input:nth-child(2){
     width: 108px;
     height: 30px;
 }
+
