--- a/jeans/style.css
+++ b/jeans/style.css
@@ -136,6 +136,7 @@ nav{
     list-style: none;
     text-transform: uppercase;
     margin-right: 11px;
+    position: relative;
     }
 
 .top-menu__item > a{
@@ -283,4 +284,54 @@ body > div > div > input:nth-child(2){
     padding-top: 6px;
     position: relative;
     right: 4px;
+}
+
+/* dropdown menu */
+
+.ins{
+    position: absolute;
+    top: 47px;
+    left: 0;
+    margin: 0 0 0 0;
+    padding: 0px 50px 0px 27px;
+    background: transparent url(img/menu-i-bg-b.png);
+    background-size: contain;
+    width: 239px;
+    display: none;
+}
+
+.ins li{
+    display: block;
+    background: none;
+    height: auto;
+    text-align: left;
+    float: none;
+    padding: 4px 0;
+    width: auto;
+    position: relative;
+    padding-bottom: 16px;
+    background-image: url(img/split-sub.png);
+    background-repeat: no-repeat;
+}
+
+.ins li a{
+    position: relative;
+    font-size: 20px;
+    line-height: 1em;
+    text-transform: uppercase;
+    color: #cdcfd0;
+    letter-spacing: 0.05em;
+    background: none;
+    text-decoration: none;
+    font-family: MyriadPro-Regular; 
+    padding-top: 20px;
+    display: block;
+}
+
+.ins .first{
+    background-image: none;
+}
+
+.top-menu__item:hover .ins{
+    display: block;
 }
