--- a/jeans/style.css
+++ b/jeans/style.css
@@ -284,6 +284,8 @@ body > div > div > input:nth-child(2){
     padding-top: 6px;
     position: relative;
     right: 4px;
+    border-radius: 8px;
+    padding-bottom: 5px;
 }
 
 /* dropdown menu */
