--- a/jeans/style.css
+++ b/jeans/style.css
@@ -51,9 +51,13 @@ nav{
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 20;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-top: -8px;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .phone{
